syntax = "proto3";
import "simulation/wire_types/general.proto";

package population;

message Header {
  uint32 version = 1;
  uint32 size = 2;
}

message Person {
  uint64 id = 1;
  uint32 curr_plan_elem = 2;
  Plan plan = 3;
}

message Plan {
  repeated Leg legs = 1;
  repeated Activity acts = 2;
}

message Activity {
  uint64 act_type = 1;
  uint64 link_id = 2;
  double x = 3;
  double y = 4;
  optional uint32 start_time = 5;
  optional uint32 end_time = 6;
  optional uint32 max_dur = 7;
}

message Leg {
  uint64 mode = 1;
  uint64 routing_mode = 2;
  optional uint32 dep_time = 3;
  uint32 trav_time = 4;
  map<string, general.AttributeValue> attributes = 6;
  oneof route {
    GenericRoute generic_route = 7;
    NetworkRoute network_route = 8;
    PtRoute pt_route = 9;
  };
}

message GenericRoute {
  uint64 start_link = 1;
  uint64 end_link = 2;
  optional uint64 trav_time = 3;
  optional double distance = 4;
  optional uint64 veh_id = 5;
}

message NetworkRoute {
  GenericRoute delegate = 1;
  repeated uint64 route = 2;
}

message PtRoute {
  GenericRoute delegate = 1;
  PtRouteDescription information = 2;
}

message PtRouteDescription {
  string transitRouteId = 1;
  optional uint32 boardingTime = 2;
  string transitLineId = 3;
  string accessFacilityId = 4;
  string egressFacilityId = 5;
}
