syntax = "proto3";
import "simulation/wire_types/messages.proto";

package vehicles;

message VehiclesContainer {
  repeated VehicleType vehicle_types = 1;
  repeated messages.Vehicle vehicles = 2;
}

message VehicleType {
  uint64 id = 1;
  float length = 2;
  float width = 3;
  float max_v = 4;
  float pce = 5;
  float fef = 6;
  uint64 net_mode = 7;
}
